Fixes compact form column alignment in RTL mode

--- a/src/components/form-compact/_form-compact.scss
+++ b/src/components/form-compact/_form-compact.scss
@@ -261,7 +261,7 @@ html[dir='rtl'] {
     .one-third.column,
     .two-thirds.column,
     .one-half.column {
-      margin-left: inherit;
+      margin-left: 0;
       margin-right: 0;
     }
   }
